--- a/99testV3/index.html
+++ b/99testV3/index.html
@@ -115,7 +115,7 @@ class Game extends Phaser.Scene {
         this.blackCar.getBounds(rect1);
         this.car.getBounds(rect2);
 
-        if (RectangleToRectangle(rect1, rect2)) {
+        if (rect2.bottom < (rect1.bottom+(rect1.height*0.6)) && rect2.top > (rect1.top-(rect1.height*0.6))) {
             this.isDone = true
             this.tweens.add({targets: this.blackCar, alpha:0, duration: 250, ease: 'sine.inOut'})
             this.tweens.add({targets: this.car, x:this.blackCar.x, y: this.blackCar.y, duration: 250, ease: 'sine.inOut'})
@@ -126,7 +126,7 @@ class Game extends Phaser.Scene {
         else{
 
             if(!this.handTween.isPlaying())
-                this.handTween = this.tweens.add({targets: this.hand, scale:{value:'-0.1'},duration: 350, yoyo:true, repeat:1, callbackScope: this ,ease: 'sine.inOut',onStart:()=>{this.hand.setAlpha(1)},onComplete:()=>{this.hand.setAlpha(0)}})
+                this.handTween = this.tweens.add({targets: this.hand, scale:{value:'-0.1'},duration: 250, yoyo:true, repeat:1, callbackScope: this ,ease: 'sine.inOut',onStart:()=>{this.hand.setAlpha(1)},onComplete:()=>{this.hand.setAlpha(0)}})
             
             this.errorText()
             this.tweens.add({targets: this.car, x:'+25', duration: 50, ease: 'sine.inOut', yoyo:true, repeat:1})
@@ -176,7 +176,7 @@ class Game extends Phaser.Scene {
             this.logo.x = width*0.5
             this.logo.y = height*0.15
 
-            this.scaleSprite(this.textGame,window.innerWidth,window.innerHeight/3, 0.7)
+            this.scaleSprite(this.textGame,window.innerWidth,window.innerHeight/3, 0.75)
             //this.textGame.setScale(0.5)
             this.textGame.x = width*0.5
             this.textGame.y = height*0.3
@@ -198,15 +198,15 @@ class Game extends Phaser.Scene {
             ///CTA
             this.textCTA.setScale(0.5)
             this.textCTA.x = width*2
-            this.textCTA.y = height*0.22
+            this.textCTA.y = height*0.2
 
-            this.logoCTA.setScale(0.5)
+            this.logoCTA.setScale(0.35)
             this.logoCTA.x = width*2
-            this.logoCTA.y = height*0.36
+            this.logoCTA.y = height*0.31
 
-            this.text2CTA.setScale(0.8)
+            this.text2CTA.setScale(0.95)
             this.text2CTA.x = width*2
-            this.text2CTA.y = height*0.54
+            this.text2CTA.y = height*0.5
 
             this.buttonCTA.x = width*0.5
             this.buttonCTA.y = height*0.68
@@ -235,15 +235,15 @@ class Game extends Phaser.Scene {
             else if(this.phase == 3){
                 this.textCTA.setScale(0.5)
                 this.textCTA.x = width*0.5
-                this.textCTA.y = height*0.22
+                this.textCTA.y = height*0.2
 
-                this.logoCTA.setScale(0.5)
+                this.logoCTA.setScale(0.35)
                 this.logoCTA.x = width*0.5
-                this.logoCTA.y = height*0.36
+                this.logoCTA.y = height*0.31
 
-                this.text2CTA.setScale(0.5)
+                this.text2CTA.setScale(0.95)
                 this.text2CTA.x = width*0.5
-                this.text2CTA.y = height*0.54
+                this.text2CTA.y = height*0.5
 
                 this.buttonCTA.x = width*0.5
                 this.buttonCTA.y = height*0.68
@@ -254,10 +254,12 @@ class Game extends Phaser.Scene {
 
             if(height <= 512){
                 this.logo.setScale(0.3)
-                this.textGame.setScale(0.5)
+                this.textGame.setScale(0.6)
                 this.blackCar.setScale(0.3)
                 this.car.setScale(0.3)
-                this.text2CTA.setScale(0.6)
+                this.textCTA.setScale(0.4)
+                this.logoCTA.setScale(0.3)
+                this.text2CTA.setScale(0.75)
 
             }
 
@@ -294,17 +296,17 @@ class Game extends Phaser.Scene {
             this.hand.y = this.blackCar.y
 
             ///CTA
-            this.textCTA.setScale(0.5)
+            this.textCTA.setScale(0.4)
             this.textCTA.x = width*2
             this.textCTA.y = height*0.15
 
-            this.logoCTA.setScale(0.5)
+            this.logoCTA.setScale(0.3)
             this.logoCTA.x = width*2
-            this.logoCTA.y = height*0.36
+            this.logoCTA.y = height*0.3
 
-            this.text2CTA.setScale(0.65)
+            this.text2CTA.setScale(0.8)
             this.text2CTA.x = width*2
-            this.text2CTA.y = height*0.6
+            this.text2CTA.y = height*0.55
 
             this.buttonCTA.x = width*0.5
             this.buttonCTA.y = height*0.72
@@ -331,17 +333,17 @@ class Game extends Phaser.Scene {
                 this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 0.55, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 0.55, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
             }
             else if(this.phase == 3){
-                this.textCTA.setScale(0.5)
+                this.textCTA.setScale(0.4)
                 this.textCTA.x = width*0.5
                 this.textCTA.y = height*0.15
 
-                this.logoCTA.setScale(0.5)
+                this.logoCTA.setScale(0.3)
                 this.logoCTA.x = width*0.5
-                this.logoCTA.y = height*0.36
+                this.logoCTA.y = height*0.3
 
-                this.text2CTA.setScale(0.65)
+                this.text2CTA.setScale(0.8)
                 this.text2CTA.x = width*0.5
-                this.text2CTA.y = height*0.6
+                this.text2CTA.y = height*0.55
 
                 this.buttonCTA.x = width*0.5
                 this.buttonCTA.y = height*0.72
@@ -367,8 +369,8 @@ class Game extends Phaser.Scene {
                 this.blackCar.setScale(0.8)
                 this.car.setScale(0.8)
                 this.textCTA.setScale(1)
-                this.logoCTA.setScale(1)
-                this.text2CTA.setScale(1)
+                this.logoCTA.setScale(0.6)
+                this.text2CTA.setScale(1.5)
                 this.ctaTween = this.tweens.chain({tweens: [{targets: this.textCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.textCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.logoCTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.logoCTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.text2CTA, x: window.innerWidth*0.45, duration: 200, ease: 'Quart.out'}, {targets: this.text2CTA, x: window.innerWidth*0.5, duration: 100, ease: 'Sine.inOut'}, {targets: this.buttonCTA, scale: 1, duration: 200, ease: 'Sine.inOut'}, {targets: this.storesCTA, scale: 1, duration: 200, ease: 'Sine.inOut'} ], paused:true, delay:500, onComplete:()=>{this.tweens.add({targets: this.buttonCTA, scale: {value: this.buttonCTA.scaleX+0.1}, duration: 1000,  ease: 'sine.inOut', yoyo:true, loop:-1}); } });
             }
         }
