--- a/bingoOdysseyV3/index.html
+++ b/bingoOdysseyV3/index.html
@@ -2,20 +2,30 @@
 
 <head>
     <title>Bingo Odyssey</title>
-    <meta name="viewport" content="width = device-width, initial-scale =1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable = 0,minimal-ui=1.0" />
+    <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,viewport-fit=cover">
     <style type="text/css">
   html {
             margin: 0;
         }
 
-        body {
+       body,html{
+            position: absolute;
             margin: 0;
             padding: 0;
-            background-color: #ffffff;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            overflow: hidden;
+            background: 0 0;
+
+            touch-action: none;
         }
 
         canvas {
-            background-color: #ffffff;
+            position: fixed;
+            top: 0;
+            left: 0;
         }
 
         @font-face {
