--- a/bingoOdysseyV3/index.html
+++ b/bingoOdysseyV3/index.html
@@ -550,8 +550,8 @@ let config = {
     scale: {
        mode: Phaser.Scale.RESIZE,
        autoCenter: Phaser.Scale.CENTER_BOTH,
-       width: window.innerWidth,
-       height: window.innerHeight,
+       width: 720,
+       height: 1280,
        autoRound: true,
        antialias: true,
     }
