--- a/bingoOdysseyV3/index.html
+++ b/bingoOdysseyV3/index.html
@@ -8,18 +8,13 @@
             margin: 0;
         }
 
-       body,html{
-            position: absolute;
-            margin: 0;
-            padding: 0;
-            top: 0;
-            right: 0;
-            left: 0;
-            bottom: 0;
-            overflow: hidden;
-            background: 0 0;
-
-            touch-action: none;
+            body {
+          width: 100%;
+          height: 100%;
+          margin: 0;
+          padding: 0;
+          background-color: #2a2a2a;
+          overflow: hidden;
         }
 
         canvas {
@@ -106,6 +101,7 @@ class Game extends Phaser.Scene {
     getSpriteScale (spriteWidth, spriteHeight, availableSpaceWidth, availableSpaceHeight) {
         var ratio = 1;
         var currentDevicePixelRatio = window.devicePixelRatio;
+
         // Sprite needs to fit in either width or height
         var widthRatio = (spriteWidth * currentDevicePixelRatio + 2 ) / availableSpaceWidth;
         var heightRatio = (spriteHeight * currentDevicePixelRatio + 2 ) / availableSpaceHeight;
@@ -127,6 +123,7 @@ class Game extends Phaser.Scene {
         this.phase = 0
         this.isDone = false
         this.music.play()
+        this.input.once('pointerdown',  function(){this.scale.startFullscreen(); }, this)
 
         this.setIntro()
         this.setGame()
@@ -364,6 +361,7 @@ class Game extends Phaser.Scene {
             }
         }); 
 
+                    
         this.input.on('pointerdown', this.onClickDownload, this)
     }
 
@@ -371,11 +369,10 @@ class Game extends Phaser.Scene {
         const width = gameSize.width;
         const height = gameSize.height;
         var isLandscape = height / width  < 1.3 ? true: false;
- let clientWidth = document.documentElement.clientWidth
- let clientHeight = document.documentElement.clientHeight
-     document.getElementsByTagName("canvas")[0].style.width = clientWidth + "px"
-         document.getElementsByTagName("canvas")[0].style.height = clientHeight + "px"
 
+   
+
+    
         if(!isLandscape){
             //INTRO
             this.bgIntro.x = width*0.5
