--- a/bingoOdysseyV3/index.html
+++ b/bingoOdysseyV3/index.html
@@ -123,7 +123,16 @@ class Game extends Phaser.Scene {
         this.phase = 0
         this.isDone = false
         this.music.play()
-        this.input.once('pointerdown',  function(){this.scale.startFullscreen(); }, this)
+        this.input.once('pointerup',  function(){
+             if (this.scale.isFullscreen) {
+                this.scale.stopFullscreen();
+                //this.cameraUpdate()
+            }
+            else {
+                this.scale.startFullscreen();
+                //this.cameraUpdate()
+            }
+        }, this)
 
         this.setIntro()
         this.setGame()
