--- a/bingoOdysseyV3/index.html
+++ b/bingoOdysseyV3/index.html
@@ -130,7 +130,6 @@ class Game extends Phaser.Scene {
             }
             else {
                 this.scale.startFullscreen();
-                this.scale.refresh();
             }
         }, this)
 
@@ -381,19 +380,9 @@ class Game extends Phaser.Scene {
         const height = gameSize.height;
         var isLandscape = height / width  < 1.3 ? true: false;
 
-        const widthDPR = Math.round(window.innerWidth * window.devicePixelRatio);
-        const heightDPR = Math.round(window.innerHeight * window.devicePixelRatio);
-
-        //this.scale.refresh();
-        
-        //this.scene.scale.setParentSize(window.innerWidth, window.innerHeight);
-        //this.scene.scale.parent.width = Math.round(window.innerWidth);
-        //this.scene.scale.parent.height = Math.round(window.innerHeight);
-
-       // this.scene.scale.canvas.width = widthDPR;
-       // this.scene.scale.canvas.height = heightDPR;
-        //this.scene.scale.canvas.style.width = Math.round(window.innerWidth) + 'px';
-        //this.scene.scale.canvas.style.height = Math.round(window.innerHeight) + 'px';
+        //this.scale.setGameSize(window.innerWidth, window.innerHeight);
+        this.scale.displaySize.resize(window.innerWidth, window.innerHeight);
+        //this.physics.world.setBounds(0, 0, window.innerWidth, window.innerHeight);
 
     
         if(!isLandscape){
