--- a/pestcontrol/index.html
+++ b/pestcontrol/index.html
@@ -3,8 +3,13 @@
     <meta name="viewport" content="width = device-width, initial-scale =1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable = 0,minimal-ui=1.0" />
     <title>Pest Control</title>
     <style>
-	   html, body {
-		  margin: 0;
+	   html{
+          margin: 0;
+       } 
+
+       body {
+		margin: 0;
+        overflow: hidden;
 		}
 
     #container {
@@ -13,6 +18,9 @@
         display: block;
     }
 
+     canvas{
+        display: block;
+    }
 
     </style>
   </head>
