--- a/mtest/index.html
+++ b/mtest/index.html
@@ -4,10 +4,11 @@
     <title>mercadolibre</title>
     <meta name="viewport" content="width = device-width, initial-scale =1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable = 0,minimal-ui=1.0" />
     <style type="text/css">
-  html {
-            margin: 0;
-            overflow: hidden;
-        }
+     * {
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+    }
 
         body {
             margin: 0;
@@ -15,10 +16,27 @@
             overflow: hidden;
             background-color: #ffffff;
         }
+
+    #text {
+        position: absolute;
+        top: 10px;
+        width: 100%;
+        text-align: center;
+        z-index: 100;
+        display:block;
+        color: white;
+        white-space: pre-line;
+        font-weight:bold ;
+        font-size: 22px;
+    }
+
+
     </style>
 </head>
 
 <body>
+    <div id="text">ENTREGUE OS ENVIOS 
+    NO MENOR TEMPO POSSÍVEL</div>
     <div id="container"></div>
     <script type="text/javascript">
         /*! howler.js v2.2.4 | (c) 2013-2020, James Simpson of GoldFire Studios | MIT License | howlerjs.com */
