--- a/mtest/index.html
+++ b/mtest/index.html
@@ -26,7 +26,8 @@
 }
 
 
-    #text {
+    #texto_inicio {
+        visibility: hidden;
         position: absolute;
         top: 37%;
         width: 100%;
@@ -36,7 +37,6 @@
         color: white;
         white-space: pre-line;
         font-weight:bold ;
-        font-size: 22px;
         font-family: 'AmsiPro';
         font-size: 24px;
     }
@@ -45,7 +45,7 @@
 
 <body>
     <div class="fontLoader" style="font-family: 'AmsiPro'; position:absolute; left:-1000px; visibility:hidden;">-</div>
-    <div id="text">ENTREGUE OS ENVIOS 
+    <div id="texto_inicio">ENTREGUE OS ENVIOS 
     NO MENOR TEMPO POSSÍVEL</div>
     <div id="container"></div>
     <script type="text/javascript">
