--- a/h/index.html
+++ b/h/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>video interactive</title>
     <meta name="viewport" content="width = device-width, initial-scale =1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable = 0,minimal-ui=1.0" />
-    <script type="text/javascript" src="/assets/mraid.js"></script>
-    <script type="text/javascript" src="/assets/howler.js"></script>
-    <script type="text/javascript" src="/assets/phaser.js"></script>
+    <script type="text/javascript" src="./assets/mraid.js"></script>
+    <script type="text/javascript" src="./assets/howler.js"></script>
+    <script type="text/javascript" src="./assets/phaser.js"></script>
     <style type="text/css">
   html {
             margin: 0;
@@ -23,7 +23,7 @@
 
     @font-face {
         font-family: 'anton';
-        src: url("/assets/anton.woff") format("woff");
+        src: url("./assets/anton.woff") format("woff");
         font-weight: normal;
         font-style: normal;
         font-display: block;
@@ -49,7 +49,7 @@
     <div id="container">
         <div id="text_timer">10</div>
     </div>
-    <script type="module" src="/assets/main.js"></script>
+    <script type="module" src="./assets/main.js"></script>
 </body>
 
 </html>
