--- a/pestcontrolUnity2/index.html
+++ b/pestcontrolUnity2/index.html
@@ -36,7 +36,7 @@
     }</style></head><body><div id="score">0 | 0</div><canvas id="container"></canvas>
    <script type="text/javascript">
       //YOURURL HERE
-      var URLCTA = "https://play.google.com/store/apps/details?id=com.WildWorks.AnimalJamPlayWild";
+      var URLCTA = "https://apps.apple.com/us/app/animal-jam/id1003820457";
       //
    </script>
    <script>
