--- a/pestcontrolUnity2/index.html
+++ b/pestcontrolUnity2/index.html
@@ -28,6 +28,12 @@
         font-family: 'Dimbo';
         font-size: 32px;
         font-weight: bold;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 
 
