--- a/pestcontrolUnity2/index.html
+++ b/pestcontrolUnity2/index.html
@@ -43,6 +43,11 @@
    <script type="text/javascript">
       //YOURURL HERE
       var URLCTA = "https://apps.apple.com/us/app/animal-jam/id1003820457";
+
+         var score1 = document.getElementById('score');
+         score1.onselectstart = function () {
+            return false;
+         }
       //
    </script>
    <script>
