--- a/pcunity/index.html
+++ b/pcunity/index.html
@@ -22,12 +22,17 @@
         right: 30px;
         width: 100%;
         text-align: right;
-        z-index: 100;
         display:block;
         color: white;
         font-family: 'Dimbo';
         font-size: 32px;
         font-weight: bold;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 
 
@@ -37,6 +42,11 @@
    <script type="text/javascript">
       //YOURURL HERE
       var URLCTA = "https://apps.apple.com/us/app/animal-jam/id1003820457";
+
+         var score1 = document.getElementById('score');
+         score1.onselectstart = function () {
+            return false;
+         }
       //
    </script>
    <script>
