--- a/pestcontrolUnity2/index.html
+++ b/pestcontrolUnity2/index.html
@@ -24,22 +24,23 @@
         text-align: right;
         display:block;
         color: white;
+        z-index: 10;
         font-family: 'Dimbo';
         font-size: 32px;
         font-weight: bold;
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        pointer-events:none
     }
+
+    .unselectable {
+     -moz-user-select: none;
+     -webkit-user-select: none;
+     -ms-user-select: none;
+     user-select: none;
+   }
 
 
     canvas{
         display: block;
-    }</style></head><body><div id="score">0 | 0</div><canvas id="container"></canvas>
+    }</style></head><body><div id="score" class="unselectable">0 | 0</div><canvas id="container"></canvas>
    <script type="text/javascript">
       //YOURURL HERE
       var URLCTA = "https://apps.apple.com/us/app/animal-jam/id1003820457";
