--- a/pestcontrolUnity2/index.html
+++ b/pestcontrolUnity2/index.html
@@ -17,7 +17,7 @@
     }
 
     #score {
-        position: absolute;
+        position: relative;
         top: 10px;
         right: 30px;
         width: 100%;
