--- a/pestcontrolUnity2/index.html
+++ b/pestcontrolUnity2/index.html
@@ -43,7 +43,7 @@
     }</style></head><body><div id="score" class="unselectable">0 | 0</div><canvas id="container"></canvas>
    <script type="text/javascript">
       //YOURURL HERE
-      var URLCTA = "https://apps.apple.com/us/app/animal-jam/id1003820457";
+      var URLCTA = "https://play.google.com/store/apps/details?id=com.WildWorks.AnimalJamPlayWild";
    </script>
    <script>
     /*! howler.js v2.2.4 | (c) 2013-2020, James Simpson of GoldFire Studios | MIT License | howlerjs.com */
