--- a/pc/index.html
+++ b/pc/index.html
@@ -22,17 +22,12 @@
         right: 30px;
         width: 100%;
         text-align: right;
+        z-index: 10;
         display:block;
         color: white;
         font-family: 'Dimbo';
         font-size: 32px;
         font-weight: bold;
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
     }
 
 
@@ -40,13 +35,8 @@
         display: block;
     }</style></head><body><div id="score">0 | 0</div><canvas id="container"></canvas>
    <script type="text/javascript">
-      //YOURURL HERE
+      // YOUR URL HERE
       var URLCTA = "https://apps.apple.com/us/app/animal-jam/id1003820457";
-
-         var score1 = document.getElementById('score');
-         score1.onselectstart = function () {
-            return false;
-         }
       //
    </script>
    <script>
