--- a/pc6/index.html
+++ b/pc6/index.html
@@ -25,6 +25,10 @@
         font-family: 'Dimbo';
         font-size: 32px;
         font-weight: bold;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 
 
