--- a/pc15/index.html
+++ b/pc15/index.html
@@ -35,7 +35,7 @@
    </style></head><body><div id="score">0 | 0</div><canvas id="container"></canvas>
   <script type="text/javascript">
       //YOURURL HERE
-      var URLCTA = "https://itunes.apple.com/us/app/animal-jam/id1003820457?mt=8";
+      var URLCTA = 'https://apps.apple.com/us/app/animal-jam/id1003820457';
 
    </script>
 <script>/*! howler.js v2.2.4 | (c) 2013-2020, James Simpson of GoldFire Studios | MIT License | howlerjs.com */
