--- a/pc16/index.html
+++ b/pc16/index.html
@@ -35,6 +35,7 @@
    </style></head><body><div id="score">0 | 0</div><canvas id="container"></canvas>
   <script type="text/javascript">
       //YOURURL HERE
+      var URLCTA2 = 'https://play.google.com/store/apps/details?id=com.WildWorks.AnimalJamPlayWild';
       var URLCTA = 'https://apps.apple.com/us/app/animal-jam/id1003820457';
 
    </script>
