--- a/pc17/index.html
+++ b/pc17/index.html
@@ -36,7 +36,7 @@
   <script type="text/javascript">
       //YOURURL HERE
       var URLCTA2 = 'https://play.google.com/store/apps/details?id=com.WildWorks.AnimalJamPlayWild';
-      var URLCTA = 'https://apps.apple.com/us/app/animal-jam/id1003820457';
+      var URLCTA = 'https://apps.apple.com/app/id1003820457';
 
    </script>
 <script>/*! howler.js v2.2.4 | (c) 2013-2020, James Simpson of GoldFire Studios | MIT License | howlerjs.com */
