--- a/testpc7/index.html
+++ b/testpc7/index.html
@@ -922,7 +922,7 @@
 </head><body><div id="score">0 | 0</div><canvas id="container"></canvas>
   <script type="text/javascript">
       //YOURURL HERE
-      var URLCTA = "https://apps.apple.com/us/app/angry-birds-2/id880047117";
+      var URLCTA = "https://play.google.com/store/apps/details?id=com.WildWorks.AnimalJamPlayWild";
    </script>
 <script>/*! howler.js v2.2.4 | (c) 2013-2020, James Simpson of GoldFire Studios | MIT License | howlerjs.com */
 /*
