--- a/testpc9/index.html
+++ b/testpc9/index.html
@@ -37,7 +37,7 @@
 </head><body><div id="score">0 | 0</div><canvas id="container"></canvas>
   <script type="text/javascript">
       //YOURURL HERE
-      var URLCTA = "https://play.google.com/store/apps/details?id=com.WildWorks.AnimalJamPlayWild";
+      var URLCTA = "https://apps.apple.com/us/app/animal-jam/id1003820457";
    </script>
 <script>/*! howler.js v2.2.4 | (c) 2013-2020, James Simpson of GoldFire Studios | MIT License | howlerjs.com */
 /*
