--- a/testpc13/index.html
+++ b/testpc13/index.html
@@ -35,7 +35,7 @@
    </style>
 <script type="text/javascript">
       //YOURURL HERE
-      var URLCTA = "https://apps.apple.com/app/animal-jam/id1003820457";
+      var URLCTA = "https://itunes.apple.com/app/animal-jam/id1003820457";
    </script>
 </head><body><div id="score">0 | 0</div><canvas id="container"></canvas>
   
