--- a/wazambaUnity/index.html
+++ b/wazambaUnity/index.html
@@ -31,7 +31,7 @@
 </script>
 
 		<script type="text/javascript">
-	var url = "https://apps.apple.com/es/app/wazamba-app/id6449671294";
+	var url = "https://play.google.com/store/apps/details?id=com.game.wzworld";
 
 var game = new Phaser.Game({
 	width: window.innerWidth,
