--- a/rewardedplaywheel/index.html
+++ b/rewardedplaywheel/index.html
@@ -19,12 +19,13 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #ffffff;
+            background-color: #000000;
             user-select: none;
             -moz-user-select: none;
             -webkit-user-select: none;
             -ms-user-select: none;
             -khtml-user-select: none;
+            display: none;
         }
 
         canvas{
@@ -46,6 +47,8 @@
 
 
     .spinBtn {
+        visibility: hidden;
+        transform-origin: center center;
         position: absolute;
         box-shadow: 0px 4px 0px 0px #2d824c;
         background:linear-gradient(to bottom, #44b96f 5%, #44b96f 100%);
@@ -90,7 +93,7 @@
     }
     
     #logo{
-        visibility:visible;
+        visibility:hidden;
 
         img{
           position: absolute;
