--- a/rpmatch3v4/index.html
+++ b/rpmatch3v4/index.html
@@ -51,7 +51,7 @@
           position: absolute;
           left: 3%;
           right: 0;
-          top:2%;
+          bottom:2%;
           text-align: center;
           max-width: 50%;
           height: auto;
@@ -131,18 +131,50 @@
         font-size: 24px;
     }
 
+    #box{
+        border: 2px black solid;
+        display: block;
+        text-align: center;
+        padding: 5px;
+        margin: 0;
+        position: absolute;
+        left: 43%;
+        top:5%;
+        background-color: black;
+        border-radius: 8px;
+        width: 40px;
+    }
+
+    #box2{
+        border: 2px black solid;
+        display: block;
+        text-align: center;
+        padding: 5px;
+        margin: 0;
+        position: absolute;
+        left: 52%;
+        top:5%;
+        background-color: black;
+        border-radius: 8px;
+        width: 40px;
+    }
+
     #text_score{
         visibility: hidden;
-        position: absolute;
-        top: 15%;
-        width: 100%;
-        text-align: center;
         z-index: 100;
-        display:block;
-        color: #000000;
+        color: #ffffff;
         white-space: pre-line;
         font-family: 'Hoop';
-        font-size: 52px;
+        font-size: 36px;
+    }
+
+    #text_score2{
+        visibility: hidden;
+        z-index: 100;
+        color: #ffffff;
+        white-space: pre-line;
+        font-family: 'Hoop';
+        font-size: 36px;
     }
 
     .myanimation {
@@ -167,7 +199,8 @@
  
     <div id="container">
         <div id="text_rewarded">Rewarded Play</div>
-        <div id="text_score">0</div>
+        <div id="box"><div id="text_score">0</div></div>
+        <div id="box2"><div id="text_score2">23</div></div>
         <div id="text_cta">PLAY GAMES</div>
         <div id="text_cta2">EARN GIFT CARDS</div>
         <div id="text_tutorial">Match the card and
