--- a/unityaudio5/index.html
+++ b/unityaudio5/index.html
@@ -179,7 +179,7 @@ var textCTA2 = document.getElementById('text_cta2');
 var textRewarded = document.getElementById('text_rewarded');
 var spinBtn = document.getElementById('btn');
 
-let music,playingOnHide
+let music,flipSFX,winSFX,playingOnHide,game
 const TAU = 2 * Math.PI;
 
 class Game extends Phaser.Scene {
@@ -303,8 +303,8 @@ class Game extends Phaser.Scene {
         //this.handTween.completeAfterLoop(0)
         var isLandscape = height / width  < 1.3 ? true: false;
 
-        if(!this.music.isPlaying)
-            this.music.play()
+        if(!music.isPlaying)
+            music.play()
 
        /* if(this.input.activePointer.y < (this.card.y-this.card.displayHeight*0.5) || 
             this.input.activePointer.y > (this.card.y+this.card.displayHeight*0.5)){
@@ -327,8 +327,8 @@ class Game extends Phaser.Scene {
     tapObject(object){
         if(!this.canTap) return
 
-        if(!this.music.isPlaying)
-            this.music.play()
+        if(!music.isPlaying)
+            music.play()
 
         var movePos = [-window.innerWidth*2,window.innerWidth*2]
 
@@ -337,7 +337,7 @@ class Game extends Phaser.Scene {
         object.disableInteractive()
         object.postFX.addShine(0.8)
         this.confetti.start()
-        this.flipSFX.play()
+        flipSFX.play()
         this.flip(object, 0 , 'gift_cards_amazon.png')
 
         this.time.delayedCall(500,()=>{
@@ -358,7 +358,7 @@ class Game extends Phaser.Scene {
             this.confettiR.start()
 
             this.time.delayedCall(500,()=>{
-                this.winSFX.play()
+                winSFX.play()
             })
 
             this.time.delayedCall(1400,()=>{
@@ -395,9 +395,9 @@ class Game extends Phaser.Scene {
        this.hand = this.add.sprite(0, 0, 'atlas', 'hand.png').setAlpha(0)
        
        this.time.delayedCall(250,()=>{
-                this.music =  this.sound.add('music', {volume:0.5, loop:true});
-                this.flipSFX =  this.sound.add('flip', {volume:1});
-                this.winSFX =  this.sound.add('win', {volume:0.8});
+                music =  this.sound.add('music', {volume:0.5, loop:true});
+                flipSFX =  this.sound.add('flip', {volume:1});
+                winSFX =  this.sound.add('win', {volume:0.8});
         },this)
 
        this.time.delayedCall(3000,()=>{
@@ -1065,13 +1065,16 @@ class Game extends Phaser.Scene {
 
 document.addEventListener('visibilitychange',() => {
    if (document.hidden) {
-    playingOnHide = !game.sound.mute;
-    game.sound.setMute(true);
+    log('audio off')
+    music.setVolume(0)
+    flipSFX.setVolume(0)
+    winSFX.setVolume(0)
   } else {
+    music.setVolume(0.5)
+    flipSFX.setVolume(0.5)
+    winSFX.setVolume(0.5)
     // Resume playing if audio was "playing on hide"
-    if (playingOnHide) {
-        game.sound.setMute(false);
-    }
+    log('audio on')   
   }
 });
 
@@ -1121,10 +1124,18 @@ function onSdkReady() {
 }
 
 function onAudioChange(audio){
-    if (audio && audio >= 1.0)
-        game.sound.setMute(false);
-    else
-        game.sound.setMute(true);
+    if (audio && audio >= 1.0){
+        log('set audio on')
+        music.setVolume(0.5)
+        flipSFX.setVolume(0.5)
+        winSFX.setVolume(0.5)
+    }
+    else{
+        log('set audio off')
+        music.setVolume(0)
+        flipSFX.setVolume(0)
+        winSFX.setVolume(0)
+    }
 }
 
 // Implement a function for executing the ad:
@@ -1132,7 +1143,8 @@ function showMyAd() {
     // Insert code for showing your playable ad.
     var el = document.body;
     el.style.display = 'block';
-    const game = new Phaser.Game(config)
+    game = new Phaser.Game(config)
+    mraid.removeEventListener('viewableChange',viewableChangeHandler);
 }
 
 // Implement a function that handles pausing and resuming the ad based on visibility:
