--- a/animaljam/index.html
+++ b/animaljam/index.html
@@ -35,6 +35,13 @@
         visibility:hidden;
         position: absolute;
 
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+
         img{
           position: absolute;
           margin: auto;
@@ -52,6 +59,13 @@
         height: -webkit-fill-available;
         visibility:hidden;
         position: absolute;
+
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+         user-select: none;
 
         img{
           position: absolute;
@@ -71,6 +85,13 @@
         height: -webkit-fill-available;
         visibility:hidden;
         position: absolute;
+
+         -webkit-touch-callout: none;
+         -webkit-user-select: none;
+         -khtml-user-select: none;
+         -moz-user-select: none;
+         -ms-user-select: none;
+         user-select: none;
 
         img{
           position: absolute;
