--- a/animaljam/index.html
+++ b/animaljam/index.html
@@ -35,6 +35,7 @@
         visibility:hidden;
         position: absolute;
 
+      -webkit-tap-highlight-color: transparent;
       -webkit-touch-callout: none;
       -webkit-user-select: none;
       -khtml-user-select: none;
@@ -60,6 +61,7 @@
         visibility:hidden;
         position: absolute;
 
+        -webkit-tap-highlight-color: transparent;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         -khtml-user-select: none;
@@ -86,6 +88,7 @@
         visibility:hidden;
         position: absolute;
 
+        -webkit-tap-highlight-color: transparent;
          -webkit-touch-callout: none;
          -webkit-user-select: none;
          -khtml-user-select: none;
