--- a/animaljam/index.html
+++ b/animaljam/index.html
@@ -8,6 +8,13 @@
         height: 100%;
         display: block;
         cursor: pointer;
+         -webkit-tap-highlight-color: transparent;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
 
    @font-face {
