--- a/yomiblock/index.html
+++ b/yomiblock/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
 		<meta content="yes" name="apple-mobile-web-app-capable"></meta>
-		<meta content="black" name="apple-mobile-web-app-status-bar-style"></meta>
+		<meta name="mobile-web-app-capable" content="yes">
 		<title>yomi blocks</title>
 	</head>
 
